# SensorStorm

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  _config.yaml  compose.yaml  vcpkg.json
.github/workflows/: deploy-docs.yml  weather-station.yaml
examples/: CMakeLists.txt  README.md  example.cpp
src/: main.cpp  main.hpp
src/core/: core.cpp  core.hpp
weather_station/: CMakeLists.txt
weather_station/src/core/: core.cpp  core.hpp
